# robot-fleet

./: .gitignore  README.md  calc_idle_time.py  pyproject.toml  requirements.txt  run_expts.sh
fleet_rules/prompts/: big_dag_system.prompt  big_dag_user.prompt  dag_system.prompt  dag_user.prompt  monolithic_system.prompt  monolithic_user.prompt  replanner_system.prompt  replanner_user.prompt
robot_fleet/: __init__.py
robot_fleet/cli/: client.py  printer.py  robotctl.py
robot_fleet/proto/: fleet_manager.proto  fleet_manager_pb2.py  fleet_manager_pb2_grpc.py
robot_fleet/robots/: __init__.py  experiment1.txt  experiment2.txt  models.py  robot_server_base.py
robot_fleet/robots/client/: fake_robot_server.py  robot_client.py
robot_fleet/robots/containers/: manager.py
robot_fleet/robots/demo/: README.md  demo1_cli.txt  experiment3.txt  experiment4_finished.txt  fake_plan  fill_node_hardcode_trevor  fill_node_hsr_only  fill_node_llm  fill_node_llm_demo2  generated_plans  hardcode_tasks.txt  locations.py  task_test.py
robot_fleet/robots/examples/: fake_robot_server.py  fill_node
robot_fleet/robots/registry/: instance_registry.py  models.py
robot_fleet/robots/schema/: schema.yaml  yaml_validator.py
robot_fleet/scripts/: grpc_gen.sh  rebuild_examples_docker.sh  run_examples_docker.sh
robot_fleet/server/: README.md  __main__.py  service.py
robot_fleet/server/allocator/: allocator.py
robot_fleet/server/executor/: executor.py
robot_fleet/server/formats/: formats.py
robot_fleet/server/planner/: __init__.py  (+2 more)
tests/registry/: test_instance_registry.py
(+32 files in other folders)
